--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "artem-schander/l5-modular": "^2.1",
         "barryvdh/laravel-dompdf": "^2.0",
+        "efectn/laravel-menu-builder": "^1.5",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
